--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7"
   }
 }
