--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "cd ../client && npm install && npm run build", 
     "dev": "nodemon server.js"
   },
   "keywords": [],
